@@ -20,6 +20,9 @@ Upgrading
 ---------
    - Nothing specific to this release, but please see previous versions upgrading section,
      especially if you are upgrading from 2.2.
+   - Specifying the default_time_to_live option when creating or altering a
+     materialized view was erroneously accepted (and ignored). It is now
+     properly rejected.
 
 3.0.10
 =====
